--- a/pages/18627.html
+++ b/pages/18627.html
@@ -664,7 +664,7 @@ margin-left: 0em;
 
 <p>In <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>, given a <a class='existingWikiWord' href='/nlab/show/mechanical+system'>physical system</a> then its <em>space of <a class='existingWikiWord' href='/nlab/show/field+history'>field histories</a> (e.g.</em><a class='existingWikiWord' href='/nlab/show/field+history'>trajectories</a>_ for <a class='existingWikiWord' href='/nlab/show/sigma-model'>sigma models</a>) is the <a class='existingWikiWord' href='/nlab/show/space'>space</a> of all ways that the system may be configured in space and <em><a class='existingWikiWord' href='/nlab/show/time'>time</a></em>, hence in <em><a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a></em>.</p>
 
-<p>For a <a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a> over a <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <math class='maruku-mathml' display='inline' id='mathml_1c35214ee50343208fe35c56fcc184fcdc709f59_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>\Sigma</annotation></semantics></math> and defined by a <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a> <math class='maruku-mathml' display='inline' id='mathml_1c35214ee50343208fe35c56fcc184fcdc709f59_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi><mover><mo>→</mo><mi>fb</mi></mover><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>E \overset{fb}{\to} \Sigma</annotation></semantics></math>, the space of trajectories is the space of <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> configurations over spacetimes, which is the <a class='existingWikiWord' href='/nlab/show/space+of+sections'>space of sections</a> of the field bundle.</p>
+<p>For a <a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a> over a <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <math class='maruku-mathml' display='inline' id='mathml_1686a887d1305f6e1e1298a762c80d2f37d957a8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>\Sigma</annotation></semantics></math> and defined by a <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a> <math class='maruku-mathml' display='inline' id='mathml_1686a887d1305f6e1e1298a762c80d2f37d957a8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi><mover><mo>→</mo><mi>fb</mi></mover><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>E \overset{fb}{\to} \Sigma</annotation></semantics></math>, the space of trajectories is the space of <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> configurations over spacetimes, which is the <a class='existingWikiWord' href='/nlab/show/space+of+sections'>space of sections</a> of the field bundle.</p>
 
 <p>For <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theories</a> this space of trajectories carries a canonical <a class='existingWikiWord' href='/nlab/show/presymplectic+structure'>presymplectic form</a> and it comes with an <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equation of motion</a> that picks some of the trajectories as being the “physically realizable ones”. The subspace of trajectories solving the equations of motion (the “<a class='existingWikiWord' href='/nlab/show/shell'>shell</a>”) equipped with this <a class='existingWikiWord' href='/nlab/show/presymplectic+structure'>presymplectic form</a> is called the <em><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></em> of the system.</p>
 
@@ -673,7 +673,7 @@ margin-left: 0em;
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/configuration+space'>configuration space</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/configuration+space+%28physics%29'>configuration space (physics)</a></li>
 </ul>
 
 <p>
@@ -690,14 +690,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  3, 2018 12:41:12 
+  Revised on January  3, 2018 13:29:35 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/space+of+field+histories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/space+of+field+histories/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/space+of+field+histories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/space+of+field+histories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/space+of+field+histories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/space+of+field+histories/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/space+of+field+histories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/space+of+field+histories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
